syntax = "proto3";

package protocol;

import "google/protobuf/timestamp.proto";

message QueryParams {
  string queryString = 1;
  string org = 2;
}

message QueryRes {
  repeated string row = 1;
  repeated string colNames = 2;
  repeated string dateTypes = 3;
  repeated bool group = 4;
  repeated string defaultVals = 5;
}

message RowMetric {
  map<string, int64> fields = 1;
  string name = 2;
  map<string, string> tags = 3;
  google.protobuf.Timestamp ts = 4;
}

message InsertDataParams {
  string bucket = 1;
  string org = 2;
  repeated RowMetric metrics = 3;
}

message InsertDataRes { int64 count = 1; }